# ai-document-assistant

./: .env.deploy.example  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  DEBUG_GUIDE.md  DEBUG_QUICKSTART.md  MIGRATION_REPORT.md  Makefile  QUICKSTART.md  README.Docker.md  README.en.md  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  功能实现优先级文档.md
.claude/: settings.local.json
.github/: copilot-instructions.md
PRPs/: ai-document-assistant.md  scrapy-crawler-replacement.md
backend/: .dockerignore  .env.example  .gitignore  CONFIG.md  Dockerfile  README.md  README_DATABASE.md  alembic.ini  api_server.py  build.spec  config.py  coverage.xml  exception.py  logging_config.py  main.py  pyproject.toml  settings_util.py
backend/api/: __init__.py  main.py  middleware.py  response_utils.py  sse_utils.py  state.py
backend/api/routes/: __init__.py  chats.py  chats_stop.py  chats_trace.py  collections.py  crawler.py  documents.py  enhanced_chat.py  files.py  health.py  ingest.py  query.py  settings.py  tasks.py
backend/chat/: __init__.py  agent_service.py  evaluation.py  models.py  router.py  service.py
backend/chat/agent/: __init__.py  cancellation.py  compaction.py  loop_detector.py  prompts.py  registry.py  runtime.py  trace.py
backend/chat/agent/llm/: __init__.py  base.py  claude.py  openai.py
backend/chat/agent/tools/: _formatting.py  answer.py  base.py  chat_info.py  citations.py  collections.py  documents.py  search.py
backend/chat/context/: __init__.py  assembler.py  expander.py
backend/chat/generation/: __init__.py  base.py  claude_backend.py  openai_backend.py
backend/chat/retrieval/: __init__.py  base.py  chunk_index.py  document_index.py  keyword_index.py  orchestrator.py  relevance_judge.py
backend/crawler/: __init__.py  manifest_store.py  scrapy_document_spider.py  scrapy_web_crawler.py  simple_web_crawler.py  web_crawler.py
backend/data_processing/: file_processor.py  text_splitter.py
backend/database/: __init__.py  base.py  connection.py  init_data.py  initialization.py
backend/database/migrations/: env.py
backend/database/migrations/versions/: 19d22996ad8c_merge_categorize_heads.py  28a82de3db0b_relax_chat_message_content_length_.py  3d9d149a244c_add_source_path_html_content_to_.py  66913a4199a7_add_sort_order_to_chats.py  66913a4200a7_add_index_version_to_collections.py  766923fa4157_initial_database_schema.py  96473d89b63b_add_readme_content_and_categories_json_.py  9dd5f96860ba_add_colletions_summary_and_document_.py  a1b2c3d4e5f6_add_clean_html_to_documents.py  abb7d532aea4_add_chat_keywords_and_keyword_.py  b2c3d4e5f6a7_add_task_stage_field.py  bd07ad5c3d45_add_not_found_to_document_status_.py  c2d4e6f8a0b1_add_bound_collection_id_to_chats.py  c3d4e5f6a7b8_update_settings_categories.py  d4e5f6a7b8c1_add_crawl_agent_categories.py  e5f6a7b8c9d0_add_categorized_at_and_regenerate_type.py  e7b8c9d0a1f2_add_i18n_fields_for_bilingual_support.py  f1a2b3c4d5e6_drop_html_columns_from_documents.py  f8a2c1e3b9d4_add_task_management_fields.py  g9b3c2d4e5f6_add_categorize_mode_and_generate_readme.py
backend/database/models/: __init__.py  chat.py  chat_index.py  collection.py  document.py  settings.py  task.py
backend/migrations/: env.py
backend/migrations/versions/: 0a776dbea0f7_add_content_field_to_documents_table.py  766923fa4157_initial_database_schema.py
backend/models/: __init__.py  api_response.py  config.py  dto.py  rag.py  requests.py  responses.py  streaming.py
backend/models/database/: __init__.py  collection.py  document.py  settings.py  task.py
backend/rag/: cache_manager.py  document_summarizer.py  enhanced_retrieval_chain.py  intent_analyzer.py  prompt_templates.py  retrieval_chain.py  retrieval_strategies.py  retrieval_strategy.py  summary_based_overview.py  summary_manager.py
backend/repository/: __init__.py  base.py  chat.py  collection.py  document.py  settings.py  task.py
backend/scripts/: clean_legacy_crawl_cache.py  reindex_existing_documents.py
backend/services/: __init__.py  chat_service.py  collection_service.py  document_service.py  enhanced_chat_service.py  llm_service.py  query_service.py  settings_service.py  task_service.py
backend/tests/: conftest.py  test_config.py  test_crawler_integration.py  test_file_processor.py  test_manifest_store.py  test_path_classification.py  test_qdrant_client.py  test_text_splitter.py
backend/tests/agent/: test_agent_service.py  test_cancellation.py  test_claude_backend.py  test_compaction.py  test_formatting.py  test_loop_detector.py  test_registry.py  test_runtime.py  test_runtime_visited.py  test_tools_citations.py  test_tools_collections.py  test_tools_documents.py  test_tools_search.py  test_trace.py
backend/vector_store/: chroma_client.py  qdrant_client.py
claude-code-full-guide/: README.md  install_claude_code_windows.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  (+4 more)
(+176 files in other folders)
